tests/expectations/compiler/tuple/return_statement_fail.out
Error [ETYC0372117]: Expected type `u64` but type `bool` was found.
    --> compiler-test:6:22
     |
   6 |         return (t.0, t.1); // The second element should be type u64 as in the function declaration.
     |                      ^^^
